fixed alignment issue with thumbnails

--- a/public_html/assets/css/test.css
+++ b/public_html/assets/css/test.css
@@ -83,7 +83,7 @@ ul.pxs_thumbnails li.selected img {
   left: 50%;
   top: 50%;
   width: 40px;
-  height: 40px;
+  height: 80px;
   border-radius: 4px;
   cursor: pointer;
 }
